--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Ignore configuration files that may contain sensitive information.
 /web/sites/*/*.settings.php
 /web/sites/*/settings*.php
+/web/sites/*/settings.php
 
 # Ignore paths that contain user-generated content.
 /web/sites/*/files
